{
"titleAppbar" : "Викторина без денежных призов",
"title" : "Весёлая викторина",
"categotyChoice" : "Выберите категорию:",
"questionsAll" : "Общие вопросы",
"questionsFilms" : "Кинофильмы СССР",
"questionsSpace" : "Космос",
"questionsWeb" : "13 Сектор",
"reset" : "На главную страницу(результат будет сброшен)",
"toMainPage" : "На главную страницу",
"result" : "Правильных ответов - {score} из {questions}",
"lastResult" : "{savedScore, plural, zero{Последний результат - {savedScore} баллов из {questionsLenght}} one{Последний результат - {savedScore} балл из {questionsLenght}} two{Последний результат - {savedScore} балла из {questionsLenght}}  few{Последний результат - {savedScore} балла из {questionsLenght}} many{Последний результат - {savedScore} баллов из {questionsLenght}} other{Последний результат - {savedScore} баллов из {questionsLenght}}} ",
"resetLeaderBoard" : "Обнулить",
"lastResults" : "Последние результаты",
"helloMessage" : "Привет, {user}!",
"changeUser" : "Сменить пользователя",
"selectUser" : "Выберите пользователя",
"information" : "Информация",
"userList" : "Список пользователей",
"currentUser" : "Текущий пользователь:",
"search" : "Поиск",
"nullify" : "Обнулить",
"userListEmpty" :"Список пользователей пуст",
"registrationDate" : "Дата регистрации:",
"userResult" : "Результат:",
"enterName" : "Введите имя",
"nameIsTaken" : "Данное имя используется",
"addUser" : "Добавить",
"cancel" : "Отмена",
"yes" : "Да",
"areYouSure" : "Вы уверены?",
"userLastResult" : "Последний результат:",
"allUserResult" : "Все результаты:",
"rightAnswersPercent" : "Процент правильных ответов:",
"resultsListEmpty" : "Результатов нет",
"leaderBoard" : "Лидеры",
"newUser" : "Новый пользователь",
"addNewUser" : "Добавить нового пользователя",
"userName" : "Имя пользователя",
"httpServerError" : "Сервер недоступен.\n Вернитесь на главную страницу и попробуйте ещё раз, или выберите другую категорию."

}