...
      stream: audioPlayerBloc.isSoundEnabledStream,
      initialData: true,
      builder: (context, snapshot) {
        var isSoundEnabled = snapshot.data;

        return IconButton(
          key: ValueKey('audioplayer_button'),
          icon: isSoundEnabled!
              ? Icon(
                  Icons.music_note,
                  color: Colors.black,
                )
              : Icon(
...
