...
          ),
        ),
        centerTitle: true,
        backgroundColor: Colors.amber,
        actions: [
          IconButton(
            key: ValueKey('leaderboard_button'),
            icon: Icon(
              Icons.emoji_events,
              color: Colors.black,
            ),
            onPressed: () {
              Navigator.pushNamed(context, RouteGenerator.leaderboard);
...
